tests/NormalTests/paczka1/fuzzy1/93257872.err
Error in line 7: OHri S87 17,59
Error in line 18: 2XaH A555 55,4
Error in line 8: T2AlRyrE4 S87 70,1
Error in line 31: 2XaH S561 86,5
Error in line 28: Q6CasQKfckt S664 89,5
Error in line 12: OHri S87 24,9
Error in line 37: OHri A555 59,7
